@@ -17,6 +17,7 @@ typedef unsigned long dword;
 
 double const PI = 3.14159265358979323846;
 
+// max number of samples in work()
 #define MAX_BUFFER_LENGTH		256			// in number of samples
 
 // machine types
@@ -178,6 +179,7 @@ class CMachineInfo;
 class CMICallbacks
 {
 public:
+    virtual ~CMICallbacks() {}
 	virtual CWaveInfo const *GetWave(int const i);
 	virtual CWaveLevel const *GetWaveLevel(int const i, int const level);
 	virtual void MessageBox(char const *txt);
@@ -266,6 +268,7 @@ public:
 class CLibInterface
 {
 public:
+    virtual ~CLibInterface() {}
 	virtual void GetInstrumentList(CMachineDataOutput *pout) {}			
 	
 	// make some space to vtable so this interface can be extended later 
@@ -331,6 +334,7 @@ public:
 class CMachineDataInput
 {
 public:
+    virtual ~CMachineDataInput() {}
 	virtual void Read(void *pbuf, int const numbytes);
 
 	void Read(int &d) { Read(&d, sizeof(int)); }
@@ -348,6 +352,7 @@ public:
 class CMachineDataOutput
 {
 public:
+    virtual ~CMachineDataOutput() {}
 	virtual void Write(void *pbuf, int const numbytes);
 
 	void Write(int d) { Write(&d, sizeof(int)); }
@@ -421,6 +426,7 @@ public:
 class CMachineInterfaceEx
 {
 public:
+    virtual ~CMachineInterfaceEx() {}
 	virtual char const *DescribeParam(int const param) { return NULL; }		// use this to dynamically change name of parameter
 	virtual bool SetInstrument(char const *name) { return false; }
 
